Updated UI to use a block rather than a sequence of numbers for pattern customization